# PasswordManager

./: .gitignore  Password Manager.txt  ReadMe.txt
PWMan/: Cargo.toml  Profile.pf
PWMan/.cargo/: config.toml
PWMan/src/: cli.rs  crypto_manager.rs  main.rs  manager.rs  password_entry.rs
