[package]
name = "pwman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
fake = "2.9.1"
pretty_assertions = "1.4.0"
mockall = "0.11.4"


[dependencies]
anyhow = "*"
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
rsa = "*"
sha2 = "*"
base64ct = "*"
pbkdf2 = "*"
rand = "*"
rand_chacha = "*"
hex = "*"
